--- a/ec/inc_header.html
+++ b/ec/inc_header.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/ec/resource/highlight/styles/atom-one-light.css">
+    <link rel="stylesheet" href="/ec/resource/highlight/styles/atom-one-dark-reasonable.css">
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/lib/jquery-ui.min.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/style.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/lib/jquery-ui.edit.css" />
@@ -18,8 +18,10 @@
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/manual.css" />
     <script src="/ec/resource/js/lib/jquery-1.12.4.min.js" type="text/javascript"></script>
     <script src="/ec/resource/js/lib/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="/ec/resource/js/lib/jquery.hotkey.js" type="text/javascript"></script>
     <script src="/ec/resource/highlight/highlight.pack.js"></script>
     <script src="/ec/resource/js/ui-template.js" type="text/javascript"></script>
+    <script src="/ec/resource/js/common.js" type="text/javascript"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
