가이드 업데이트

--- a/ec/module/ui_Typo.html
+++ b/ec/module/ui_Typo.html
@@ -7,12 +7,14 @@
                 <div class="guide-box">
                     <div class="guide-row len-jp">
                         <h2 class="sub-header">Heading</h2>
-                        <h1>タイトル 1</h1>
-                        <h2 class="page-title">タイトル 2</h2>
-                        <h3 class="page-title-sub">タイトル 3</h3>
-                        <h4>タイトル 4</h4>
-                        <h5>タイトル 5</h5>
-                        <h6>タイトル 6</h6>
+                        <ul class="guide-list">
+                            <li><h1>h1. タイトル 1</h1></li>
+                            <li><h2 class="page-title">h2. タイトル 2</h2></li>
+                            <li><h3 class="page-title-sub">h3. タイトル 3</h3></li>
+                            <li><h4>h4. タイトル 4</h4></li>
+                            <li><h5>h5. タイトル 5</h5></li>
+                            <li><h6>h6. タイトル 6</h6></li>
+                        </ul>
                     </div>
                     <div class="guide-code">
                         <pre><code class="html">
@@ -26,9 +28,11 @@
                     </div>
                     <div class="guide-row len-jp">
                         <h2 class="sub-header">Heading in sub copy</h2>
-                        <h1>タイトル 1<small>より多くのタイトル</small></h1>
-                        <h2>タイトル 2<small>より多くのタイトル</small></h2>
-                        <h3>タイトル 3<small>より多くのタイトル</small></h3>
+                        <ul class="guide-list">
+                            <li><h1>h1. タイトル 1<small>より多くのタイトル</small></h1></li>
+                            <li><h2>h2. タイトル 2<small>より多くのタイトル</small></h2></li>
+                            <li><h3>h3. タイトル 3<small>より多くのタイトル</small></h3></li>
+                        </ul>
                     </div>
                     <div class="guide-code">
                         <pre><code class="html">
@@ -61,6 +65,15 @@
                             <p class="t-left">テキスト</p>
                             <p class="t-center">テキスト</p>
                             <p class="t-right">テキスト</p>
+                        </code></pre>
+                    </div>
+                    <div class="guide-row len-jp">
+                        <h2 class="sub-header">Color</h2>
+                        <p class="t-danger">テキスト</p>
+                    </div>
+                    <div class="guide-code">
+                        <pre><code class="html">
+                            <p class="t-danger">テキスト</p>
                         </code></pre>
                     </div>
                     <div class="guide-row len-jp">
